--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,6 +3,7 @@
 
 @import "home-page";
 @import "error-page";
+@import "new-request-page";
 @import "post-page";
 @import "header";
 @import "search_results";
