--- a/styles/_home-page.scss
+++ b/styles/_home-page.scss
@@ -32,6 +32,7 @@
     }
 
     >.categories {
+        margin-bottom: 4em;
         display: grid;
         grid-template-columns: 1fr;
         gap: 2em;
