feat: simplify CSS

--- a/style.css
+++ b/style.css
@@ -569,7 +569,7 @@ ul.breadcrumbs li:not(:last-child)::after, ol.breadcrumbs li:not(:last-child)::a
     flex-wrap: nowrap;
   }
 }
-.button, #search-result .pagination a, #new-request-form button[type=submit], .error-page .back-to-homepage a, .recent-activity .recent-activity-controls a {
+.button, .pagination a, #new-request-form button[type=submit], .error-page .back-to-homepage a, .recent-activity .recent-activity-controls a {
   padding: 1em 1.5em;
   font-family: Syne, sans-serif;
   font-size: 1em;
@@ -582,44 +582,44 @@ ul.breadcrumbs li:not(:last-child)::after, ol.breadcrumbs li:not(:last-child)::a
   cursor: pointer;
 }
 
-.button:hover, #search-result .pagination a:hover, #new-request-form button[type=submit]:hover, .error-page .back-to-homepage a:hover, .recent-activity .recent-activity-controls a:hover {
+.button:hover, .pagination a:hover, #new-request-form button[type=submit]:hover, .error-page .back-to-homepage a:hover, .recent-activity .recent-activity-controls a:hover {
   text-decoration: none;
   box-shadow: none !important;
   transition: box-shadow 0.5s ease, background-color 0.5s ease;
 }
 
-.button:focus, #search-result .pagination a:focus, #new-request-form button[type=submit]:focus, .error-page .back-to-homepage a:focus, .recent-activity .recent-activity-controls a:focus {
+.button:focus, .pagination a:focus, #new-request-form button[type=submit]:focus, .error-page .back-to-homepage a:focus, .recent-activity .recent-activity-controls a:focus {
   outline: none;
   border-width: 2px;
   padding: calc(1em - 1px) calc(1.5em - 1px);
 }
 
-.button:disabled, #search-result .pagination a:disabled, #new-request-form button[type=submit]:disabled, .error-page .back-to-homepage a:disabled, .recent-activity .recent-activity-controls a:disabled, .button.disabled, #search-result .pagination a.disabled, #new-request-form button.disabled[type=submit], .error-page .back-to-homepage a.disabled, .recent-activity .recent-activity-controls a.disabled {
+.button:disabled, .pagination a:disabled, #new-request-form button[type=submit]:disabled, .error-page .back-to-homepage a:disabled, .recent-activity .recent-activity-controls a:disabled, .button.disabled, .pagination a.disabled, #new-request-form button.disabled[type=submit], .error-page .back-to-homepage a.disabled, .recent-activity .recent-activity-controls a.disabled {
   opacity: 0.5;
   pointer-events: none;
 }
 
-.button.primary, #search-result .pagination a.primary, #new-request-form button[type=submit], .error-page .back-to-homepage a.primary, .recent-activity .recent-activity-controls a.primary {
+.button.primary, .pagination a.primary, #new-request-form button[type=submit], .error-page .back-to-homepage a.primary, .recent-activity .recent-activity-controls a.primary {
   color: #fff !important;
   background-color: #007459;
   box-shadow: 4px 4px #fbfbfb, 4px 4px 0 1px #161c1c;
 }
 
-.button.primary:hover, #search-result .pagination a.primary:hover, #new-request-form button[type=submit]:hover, .error-page .back-to-homepage a.primary:hover, .recent-activity .recent-activity-controls a.primary:hover {
+.button.primary:hover, .pagination a.primary:hover, #new-request-form button[type=submit]:hover, .error-page .back-to-homepage a.primary:hover, .recent-activity .recent-activity-controls a.primary:hover {
   background-color: #20463b;
 }
 
-.button.secondary, #search-result .pagination a, #new-request-form button.secondary[type=submit], .error-page .back-to-homepage a.secondary, .recent-activity .recent-activity-controls a.secondary {
+.button.secondary, .pagination a, #new-request-form button.secondary[type=submit], .error-page .back-to-homepage a.secondary, .error-page .back-to-homepage .pagination a, .pagination .error-page .back-to-homepage a, .recent-activity .recent-activity-controls a.secondary, .recent-activity .recent-activity-controls .pagination a, .pagination .recent-activity .recent-activity-controls a {
   color: #20463b !important;
   background-color: #d9eb89;
   box-shadow: 4px 4px #fbfbfb, 4px 4px 0 1px #20463b;
 }
 
-.button.secondary:hover, #search-result .pagination a:hover, #new-request-form button.secondary[type=submit]:hover, .error-page .back-to-homepage a.secondary:hover, .recent-activity .recent-activity-controls a.secondary:hover {
+.button.secondary:hover, .pagination a:hover, #new-request-form button.secondary[type=submit]:hover, .error-page .back-to-homepage a.secondary:hover, .recent-activity .recent-activity-controls a.secondary:hover {
   background-color: #c8e6da;
 }
 
-.button.tertiary, #search-result .pagination a.tertiary, #new-request-form button.tertiary[type=submit], .error-page .back-to-homepage a, .recent-activity .recent-activity-controls a {
+.button.tertiary, .pagination a.tertiary, #new-request-form button.tertiary[type=submit], .error-page .back-to-homepage a, .recent-activity .recent-activity-controls a {
   color: #161c1c !important;
   font-family: Figtree, sans-serif;
   font-weight: 500;
@@ -627,11 +627,11 @@ ul.breadcrumbs li:not(:last-child)::after, ol.breadcrumbs li:not(:last-child)::a
   border-color: #161c1c;
 }
 
-.button.tertiary:hover, #search-result .pagination a.tertiary:hover, #new-request-form button.tertiary[type=submit]:hover, .error-page .back-to-homepage a:hover, .recent-activity .recent-activity-controls a:hover {
+.button.tertiary:hover, .pagination a.tertiary:hover, #new-request-form button.tertiary[type=submit]:hover, .error-page .back-to-homepage a:hover, .recent-activity .recent-activity-controls a:hover {
   background-color: #fbfbfb;
 }
 
-.button.no-shadow, #search-result .pagination a, #new-request-form button.no-shadow[type=submit], .error-page .back-to-homepage a, .recent-activity .recent-activity-controls a {
+.button.no-shadow, .pagination a, #new-request-form button.no-shadow[type=submit], .error-page .back-to-homepage a, .recent-activity .recent-activity-controls a {
   box-shadow: none;
 }
 
@@ -1830,7 +1830,7 @@ textarea.textfield {
   margin-top: calc(-2em - 5px);
 }
 
-.division-group > .division.secondary, #search-result .pagination .division-group > a.division {
+.division-group > .division.secondary, .pagination .division-group > a.division {
   background-color: #c8e6da;
 }
 
@@ -2019,7 +2019,7 @@ textarea.textfield {
   justify-content: center;
   gap: 2em;
 }
-.article-votes .article-votes-controls .button, .article-votes .article-votes-controls #search-result .pagination a, #search-result .pagination .article-votes .article-votes-controls a, .article-votes .article-votes-controls .recent-activity .recent-activity-controls a, .recent-activity .recent-activity-controls .article-votes .article-votes-controls a, .article-votes .article-votes-controls .error-page .back-to-homepage a, .error-page .back-to-homepage .article-votes .article-votes-controls a, .article-votes .article-votes-controls #new-request-form button[type=submit], #new-request-form .article-votes .article-votes-controls button[type=submit] {
+.article-votes .article-votes-controls .button, .article-votes .article-votes-controls .pagination a, .pagination .article-votes .article-votes-controls a, .article-votes .article-votes-controls .recent-activity .recent-activity-controls a, .recent-activity .recent-activity-controls .article-votes .article-votes-controls a, .article-votes .article-votes-controls .error-page .back-to-homepage a, .error-page .back-to-homepage .article-votes .article-votes-controls a, .article-votes .article-votes-controls #new-request-form button[type=submit], #new-request-form .article-votes .article-votes-controls button[type=submit] {
   text-transform: uppercase;
 }
 
@@ -2028,7 +2028,10 @@ textarea.textfield {
   margin-bottom: 2em;
 }
 
-.navbar .button, .navbar #search-result .pagination a, #search-result .pagination .navbar a, .navbar .recent-activity .recent-activity-controls a, .recent-activity .recent-activity-controls .navbar a, .navbar .error-page .back-to-homepage a, .error-page .back-to-homepage .navbar a, .navbar #new-request-form button[type=submit], #new-request-form .navbar button[type=submit], .navbar .textfield, .navbar .search-form input[type=search], .search-form .navbar input[type=search] {
+.navbar.desktop .right, .navbar.desktop .left, .navbar.desktop .center {
+  height: 63px !important;
+}
+.navbar .button, .navbar .pagination a, .pagination .navbar a, .navbar .recent-activity .recent-activity-controls a, .recent-activity .recent-activity-controls .navbar a, .navbar .error-page .back-to-homepage a, .error-page .back-to-homepage .navbar a, .navbar #new-request-form button[type=submit], #new-request-form .navbar button[type=submit], .navbar .textfield, .navbar .search-form input[type=search], .search-form .navbar input[type=search] {
   font-size: 0.8em;
 }
 .navbar form {
@@ -2054,12 +2057,19 @@ textarea.textfield {
   padding: 3em 0;
   text-align: center;
 }
-#search-result .pagination {
+
+#no-search-results {
+  text-align: center;
+  max-width: 1024px;
+  margin: 3em auto;
+}
+
+.pagination {
   display: block;
   padding-top: 1em;
   padding-bottom: 5em;
 }
-#search-result .pagination ul {
+.pagination ul {
   padding-left: 0;
   display: flex;
   flex-direction: column;
@@ -2068,28 +2078,22 @@ textarea.textfield {
   gap: 1em;
 }
 @media screen and (min-width: 800px) {
-  #search-result .pagination ul {
+  .pagination ul {
     flex-direction: row;
   }
 }
-#search-result .pagination ul li {
+.pagination ul li {
   display: inline-block;
   height: 3em;
 }
-#search-result .pagination a {
+.pagination a {
   display: block;
   text-align: center;
 }
 @media screen and (min-width: 800px) {
-  #search-result .pagination a {
+  .pagination a {
     display: inline-block;
   }
-}
-
-#no-search-results {
-  text-align: center;
-  max-width: 1024px;
-  margin: 3em auto;
 }
 
 .breadcrumbs li:first-child {
