feat: my requests page

--- a/style.css
+++ b/style.css
@@ -1975,6 +1975,26 @@ textarea.textfield {
   display: none;
 }
 
+#list-request-heading h1 {
+  text-align: center;
+  font-weight: 600;
+  margin-bottom: 1em;
+}
+#list-request-heading .filters {
+  display: flex;
+  justify-content: center;
+  gap: 2em;
+  margin-bottom: 4em;
+}
+
+#request-list-heading {
+  margin-bottom: 4em;
+}
+
+#list-request {
+  background-color: white;
+}
+
 #article-heading > div {
   max-width: 1440px;
 }
