--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,6 +4,7 @@
 @import "home-page";
 @import "error-page";
 @import "new-request-page";
+@import "requests-page";
 @import "post-page";
 @import "header";
 @import "search_results";
