--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,3 +1,18 @@
+<nav class="navbar single mobile tablet">
+    <div class="left">
+        {{#link 'help_center'}}
+            <img src="{{settings.logo}}" alt="{{t 'home_page' name=help_center.name}}"/>
+        {{/link}}
+    </div>
+
+    <div class="center"></div>
+
+    <div class="right">
+        <a href="/hc/es-es/requests/new" class="button primary no-shadow">Crear un ticket</a>
+        ---
+    </div>
+</nav>
+
 <nav class="navbar desktop double">
     <div class="top">
         <div class="left">
