--- a/templates/requests_page.hbs
+++ b/templates/requests_page.hbs
@@ -72,6 +72,8 @@
                     </div>
                 {{/each}}
             </div>
+
+            {{pagination}}
         {{/unless}}
     </div>
 </div>
