feat: request page

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,7 @@
 @import "error-page";
 @import "new-request-page";
 @import "requests-page";
+@import "request-page";
 @import "post-page";
 @import "header";
 @import "search_results";
