--- a/style.css
+++ b/style.css
@@ -2076,6 +2076,104 @@ textarea.textfield {
   background-color: #D9EB89;
 }
 
+#request-heading {
+  margin-bottom: 4em;
+}
+#request-heading h1 {
+  max-width: 1440px;
+  margin: 1em auto 0;
+  text-align: center;
+}
+#request-heading .request-tags {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  margin-bottom: 4em;
+}
+@media screen and (min-width: 768px) {
+  #request-heading .request-tags {
+    justify-content: flex-start;
+    flex-direction: row;
+  }
+}
+#request-heading .request-tags > div {
+  text-align: center;
+  margin: 0 auto;
+  border-radius: 160px;
+  border: 1px solid #20463B;
+  padding: 0.5em 2.5em;
+  text-decoration: none;
+  color: #20463B !important;
+}
+#request-heading .request-tags > div.status.answered {
+  color: white !important;
+  background-color: #E0A407;
+}
+#request-heading .request-tags > div.status.solved {
+  background-color: #D9EB89;
+}
+
+#request-comments .comment-item {
+  max-width: 1440px;
+  margin: 0 auto;
+  display: grid;
+  gap: 2em;
+  grid-template-areas: "metadata" "body";
+}
+@media screen and (min-width: 768px) {
+  #request-comments .comment-item {
+    column-gap: 4em;
+    grid-template-columns: 10em 1fr;
+    grid-template-areas: "metadata body";
+  }
+}
+#request-comments .comment-item .metadata {
+  grid-area: metadata;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+#request-comments .comment-item .metadata > div {
+  text-align: center;
+}
+#request-comments .comment-item .author-name {
+  grid-area: author-name;
+}
+#request-comments .comment-item .author-role {
+  grid-area: author-role;
+  padding: 0.5em 1em;
+  border-radius: 160px;
+  text-transform: uppercase;
+  border: 1px solid #20463B;
+  text-decoration: none;
+  color: #20463B !important;
+}
+#request-comments .comment-item .author-role.agent {
+  background-color: #D9EB89;
+}
+#request-comments .comment-item .author-avatar {
+  grid-area: author-avatar;
+}
+#request-comments .comment-item .author-avatar img {
+  border-radius: 160px;
+}
+#request-comments .comment-item .date {
+  grid-area: date;
+  font-size: 0.8em;
+}
+#request-comments .comment-item .body {
+  grid-area: body;
+}
+
+#add-comment .controls {
+  text-align: center;
+}
+#add-comment input[type=submit] {
+  text-align: center;
+  margin-top: 1em;
+  margin-bottom: 4em;
+}
+
 #article-heading > div {
   max-width: 1440px;
 }
