--- a/styles/_request-page.scss
+++ b/styles/_request-page.scss
@@ -12,17 +12,17 @@
         flex-direction: column;
         gap: 1em;
 
+        margin-top: 2em;
         margin-bottom: 4em;
 
         @media screen and (min-width: 768px) {
-            justify-content: flex-start;
+            justify-content: center;
             flex-direction: row;
         }
 
         > div {
             //width: 100%;
             text-align: center;
-            margin: 0 auto;
             border-radius: 160px;
             border: 1px solid #20463B;
             padding: 0.5em 2.5em;
