--- a/styles/_request-page.scss
+++ b/styles/_request-page.scss
@@ -45,7 +45,7 @@
 
 #request-comments {
     .white {
-        background-color: white;
+        background-color: white !important;
     }
 
     .comment-item {
