--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,63 +1,48 @@
-<nav class="navbar single mobile tablet">
-    <div class="left">
-        {{#link 'help_center'}}
-            <img src="{{settings.logo}}" alt="{{t 'home_page' name=help_center.name}}"/>
-        {{/link}}
-    </div>
-
-    <div class="center"></div>
-
-    <div class="right">
-        <a href="/hc/es-es/requests/new" class="button primary no-shadow">Crear un ticket</a>
-        ---
-    </div>
-</nav>
-
-<nav class="navbar desktop double">
-    <div class="top">
-        <div class="left">
-            <a class="button secondary no-shadow" href="https://www.vadavo.com/">
+<nav>
+    <div>
+        <div class="back-to-vadavo">
+            <a role="menuitem" class="button secondary no-shadow" href="https://www.vadavo.com/">
                 Ir a VADAVO.com
             </a>
         </div>
-        <div class="center">
 
-        </div>
-        <div class="right">
-            <div class="contact-info">
-                <div>
-                    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"></path>
-                    </svg>
-                    <span>(+34) 960 30 50 50</span>
-                </div>
-                <div>
-                    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"></path>
-                    </svg>
-                    <span>soporte@vadavo.com</span>
-                </div>
+        <div class="contact-info">
+            <div>
+                <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"></path>
+                </svg>
+                <span>(+34) 960 30 50 50</span>
+            </div>
+            <div>
+                <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"></path>
+                </svg>
+                <span>soporte@vadavo.com</span>
             </div>
         </div>
-    </div>
 
-    <div class="bottom">
-        <div class="left">
-            {{#link 'help_center'}}
+        <div class="logo">
+            {{#link 'help_center' role="menuitem"}}
                 <img src="{{settings.logo}}" alt="{{t 'home_page' name=help_center.name}}"/>
             {{/link}}
         </div>
-        <div class="center">
-            {{search submit=false instant=settings.instant_search class='search-form'}}
-        </div>
-        <div class="right" style="display: flex; gap: 1em;">
-            <a href="/hc/es-es/requests/new" class="button primary no-shadow">Crear un ticket</a>
+
+        <div class="links">
+            <a role="menuitem" href="/hc/es-es/requests/new" class="button primary no-shadow">Crear un ticket</a>
             {{#if signed_in}}
                 {{#link "requests" role="menuitem"}}Mis tickets{{/link}}
                 {{#link "sign_out" role="menuitem"}}Cerrar sesión{{/link}}
             {{else}}
                 {{#link 'sign_in'}}Iniciar sesión{{/link}}
             {{/if}}
+        </div>
+
+        <div class="search">
+            {{search submit=false instant=settings.instant_search class='search-form'}}
+        </div>
+
+        <div class="burger" aria-hidden="true" role="presentation">
+            <svg aria-hidden="true" role="presentation" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg"><path d="M104 333H896C929 333 958 304 958 271S929 208 896 208H104C71 208 42 237 42 271S71 333 104 333ZM104 583H896C929 583 958 554 958 521S929 458 896 458H104C71 458 42 487 42 521S71 583 104 583ZM104 833H896C929 833 958 804 958 771S929 708 896 708H104C71 708 42 737 42 771S71 833 104 833Z"></path></svg>
         </div>
     </div>
 </nav>
