--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -119,3 +119,26 @@ nav {
 
 
 }
+
+div.burger-menu {
+    background-color: #f9f8f3;
+    position: fixed;
+    top: 64px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: none;
+    padding-top: 1em;
+    align-items: center;
+    gap: 2em;
+
+    &.open {
+        display: flex;
+        flex-direction: column;
+
+        @media screen and (min-width: $breakpoint) {
+            display: none;
+        }
+    }
+}
