--- a/templates/requests_page.hbs
+++ b/templates/requests_page.hbs
@@ -25,7 +25,7 @@
                     </div>
 
                     <div id="area-submit">
-                        <button type="submit" class="button button-primary">Buscar ticket</button>
+                        <button type="submit" class="button tertiary">Buscar ticket</button>
                     </div>
                 </div>
             {{/form}}
